--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -1,7 +1,13 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Evart Social Network</title>
+    <style>
+        #developed {display: none;}
+    </style>
 </head>
 <body>
 <div id="app"></div>
+<div id="developed">
+    <a href="http://kissarat.github.io/">Developed by Taras Labiak</a>
+</div>
 </body>
