--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -1,13 +1,27 @@
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Evart Social Network</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <title>Evart Social Network</title>
+    <meta name="description" content="
+Evart Social Network — социальная сеть будущего. Включает такие возможности как:
+видео звонки,
+звонки,
+конференции,
+вебинар-комнаты,
+новый адаптивный дизайн,
+и еще много интересного
+"/>
+    <meta property="og:image" content="http://evart.com/images/join-back.jpg"/>
+    <meta name="author" content="Taras Labiak">
     <style>
-        #developed {display: none;}
+        #developed {
+            display: none;
+        }
     </style>
 </head>
 <body>
 <div id="app"></div>
 <div id="developed">
-    <a href="http://kissarat.github.io/">Developed by Taras Labiak</a>
+    Developed by <a href="http://kissarat.github.io/">Taras Labiak</a>
 </div>
 </body>
